web facebook login WIP

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ django-iphone-push
 -e git+https://github.com/jbl2024/django-extjs#egg=django-extjs
 django-compress
 simplejson
+django-social-auth
