added ssh support to get the git repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,4 @@ django-compress
 simplejson
 django-social-auth
 requests
--e git+https://github.com:/yasound/uploader.git#egg=uploader
+-e git+ssh://git@github.com/yasound/uploader.git#egg=uploader
