--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 Django >= 1.3
 South
 django-tastypie
-django-kombu
 celery
+celery-with-redis
 django-celery
 tweepy
 django-taggit
@@ -23,5 +23,4 @@ requests
 -e git+https://github.com/yasound/uploader.git#egg=uploader
 sorl-thumbnail
 unidecode
-#fuzzy
-gunicorn
+fuzzy
