--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ django-compress
 simplejson
 django-social-auth
 requests
--e git+https://github.com/yasound/uploader.git#egg=uploader
+-e git+ssh://git@github.com/yasound/uploader.git#egg=uploader
 sorl-thumbnail
 unidecode
 fuzzy
