--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-celery
 tweepy
 django-taggit
 python-memcached
-facepy
+facepy ==0.6.8
 django-test-utils
 -e git+https://github.com/seatgeek/fuzzywuzzy.git#egg=fuzzywuzzy
 pyyaml
