--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ celery-with-redis
 django-celery
 tweepy
 django-taggit
+django-taggit-templatetags
 python-memcached
 facepy ==0.6.8
 django-test-utils
