geo localization: added city, latitude, longitude to UserProfile use geoip to set latitude and longitude if not provided by the client

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,4 @@ python-dateutil<=1
 xlwt
 -e git+https://github.com/lynadge/emencia-django-newsletter.git#egg=emencia-django-newsletter
 django-tinymce
+pygeoip
