--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ django-pipeline == 1.1.27
 jsmin
 simplejson
 django-social-auth
-requests
+requests>=0.13.9
 -e git+ssh://git@github.com/yasound/uploader.git#egg=uploader
 sorl-thumbnail
 unidecode
