added current_song info for radioways radios

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ simplejson
 django-social-auth
 requests>=0.13.9
 -e git+ssh://git@github.com/yasound/uploader.git#egg=uploader
+-e git+ssh://git@github.com/yasound/yametadata.git#egg=yametadata
 sorl-thumbnail
 unidecode
 fuzzy
