--- a/requirements.txt
+++ b/requirements.txt
@@ -45,3 +45,4 @@ pygeoip
 -e git+https://github.com/yasound/python-musicbrainz-ngs.git#egg=python-musicbrainz-ngs
 unicodecsv
 django_compressor
+debug_toolbar
